--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "dapple_packages/token-auction"]
 	path = dapple_packages/token-auction
 	url = https://github.com/MakerDAO/token-auction.git
+[submodule "dapple_packages/erc20"]
+	path = dapple_packages/erc20
+	url = https://github.com/nexusdev/erc20
