--- a/frontend/settings.json
+++ b/frontend/settings.json
@@ -8,6 +8,8 @@
         "MKR": {
             "name": "MKR",
             "address": "0xffb1c99b389ba527a9194b1606b3565a07da3eef"
-        }
+        },
+        "auctionId": 1,
+        "auctionletId": 1
     }
 }
