--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,5 @@ dist/
 node_modules/
 npm-debug.log
 nohup.out
-frontend/packages/dapple/build/meteor.js
+frontend/packages/erc20/build/
+frontend/packages/token-auction/build/
