Added path option in setting to deal with routes for local and deployment

--- a/frontend/settings.json
+++ b/frontend/settings.json
@@ -10,6 +10,7 @@
         },
         "auctionId": 5,
         "auctionletId": 5,
-        "host": "http://makerdao.github.io/weekly-mkr-auction/"
+        "host": "http://makerdao.github.io/weekly-mkr-auction/",
+        "path": "/weekly-mkr-auction/"
     }
 }
