address eslint errors for toastr

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,7 +40,8 @@
       "ERC20": true,
       "auctionPath": true,
       "Template": true,
-      "numeral": true
+      "numeral": true,
+      "toastr": true
     },
     "ignore": [
       "/server/**"
