--- a/frontend/settings.json
+++ b/frontend/settings.json
@@ -10,7 +10,8 @@
                 "address": "0xffb1c99b389ba527a9194b1606b3565a07da3eef"
             },
             "auctionId": 1,
-            "auctionletId": 1
+            "auctionletId": 1,
+            "etherscanApiToken" : "E5ZYC8AQXH5EX3MPTZ7MXTGAUJJ9SDX1BH"
         },
         "live": {
             "ETH": {
@@ -22,7 +23,8 @@
                 "address": "0xc66ea802717bfb9833400264dd12c2bceaa34a6d"
             },
             "auctionId": 2,
-            "auctionletId": 2
+            "auctionletId": 2,
+            "etherscanApiToken" : "E5ZYC8AQXH5EX3MPTZ7MXTGAUJJ9SDX1BH"
         }
     }
 }
