--- a/package.json
+++ b/package.json
@@ -1,9 +1,63 @@
 {
   "name": "weekly-mkr-auction",
+  "private": true,
   "scripts": {
-    "build": "gulp build"
+    "build": "gulp build",
+    "start": "meteor --settings settings.json",
+    "lint": "eslint .",
+    "pretest": "npm run lint --silent"
+  },
+  "eslintConfig": {
+    "parser": "babel-eslint",
+    "parserOptions": {
+      "allowImportExportEverywhere": true
+    },
+    "plugins": [
+      "meteor"
+    ],
+    "extends": [
+      "airbnb-base",
+      "plugin:meteor/recommended"
+    ],
+    "settings": {
+      "import/resolver": "meteor"
+    },
+    "rules": {
+      "meteor/no-session": 0,
+      "max-len": [2,120, 2, {"ignoreComments": true}],
+      "import/no-extraneous-dependencies": 0
+    },
+    "globals": {
+      "Meteor": true,
+      "Session": true,
+      "Dapple": true,
+      "web3": true,
+      "localStorage": true,
+      "_": true,
+      "Package": true,
+      "Web3": true,
+      "window": true,
+      "TokenAuction": true,
+      "ERC20": true,
+      "auctionPath": true,
+      "Template": true,
+      "numeral": true,
+      "toastr": true
+    },
+    "ignore": [
+      "/server/**"
+    ]
+  },
+  "dependencies": {
+    "meteor-node-stubs": "~0.2.0"
   },
   "devDependencies": {
+    "babel-eslint": "^6.1.2",
+    "eslint": "^3.2.2",
+    "eslint-config-airbnb-base": "^5.0.1",
+    "eslint-import-resolver-meteor": "^0.3.1",
+    "eslint-plugin-import": "^1.12.0",
+    "eslint-plugin-meteor": "^4.0.0",
     "gulp": "^3.9.1",
     "gulp-gh-pages": "^0.5.4",
     "gulp-sync": "^0.1.4",
