Some view changes, token addresses. Got rid of 'settings.json'.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,7 +2,7 @@
   "name": "frontend",
   "private": true,
   "scripts": {
-    "start": "meteor --settings settings.json",
+    "start": "meteor",
     "lint": "eslint .",
     "pretest": "npm run lint --silent"
   },
