--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "devDependencies": {
     "gulp": "^3.9.1",
     "gulp-gh-pages": "^0.5.4",
+    "gulp-surge": "^0.1.0",
     "gulp-sync": "^0.1.4",
     "meteor-build-client": "^0.3.1"
   }
